--- a/package.json
+++ b/package.json
@@ -12,7 +12,16 @@
   "dependencies": {
     "axios": "^1.11.0",
     "express": "^5.1.0",
-    "firebase": "^12.2.1"
+    "firebase": "^12.2.1",
+    "firebase-admin": "^13.5.0"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/UsagiRamune/Data_Network_Express-Server.git"
+  },
+  "bugs": {
+    "url": "https://github.com/UsagiRamune/Data_Network_Express-Server/issues"
+  },
+  "homepage": "https://github.com/UsagiRamune/Data_Network_Express-Server#readme",
   "description": ""
 }
